--- a/12-beginning-rxcocoa/starter/Wundercast/Base.lproj/Main.storyboard
+++ b/12-beginning-rxcocoa/starter/Wundercast/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1nm-sp-yoH">
-                                <rect key="frame" x="180" y="606" width="0.0" height="0.0"/>
+                                <rect key="frame" x="137.5" y="606" width="102" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="CLJ-pJ-S1j"/>
                                     <constraint firstAttribute="height" constant="50" id="xV4-GP-Mfl"/>
@@ -87,6 +87,7 @@
                             <constraint firstItem="CvG-51-WJq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="LuH-bS-Wr5"/>
                             <constraint firstItem="jQQ-9b-2rA" firstAttribute="top" secondItem="aYm-dp-fOW" secondAttribute="bottom" constant="8" id="MFT-Kh-TpX"/>
                             <constraint firstItem="fn5-hY-7os" firstAttribute="top" secondItem="jQQ-9b-2rA" secondAttribute="bottom" constant="8" id="Rba-DY-MEe"/>
+                            <constraint firstItem="1nm-sp-yoH" firstAttribute="top" secondItem="fn5-hY-7os" secondAttribute="bottom" constant="50" id="SB6-3Z-f5C"/>
                             <constraint firstItem="jQQ-9b-2rA" firstAttribute="top" secondItem="x4a-i8-beX" secondAttribute="bottom" constant="8" id="VFJ-kt-pMI"/>
                             <constraint firstAttribute="trailingMargin" secondItem="CvG-51-WJq" secondAttribute="trailing" id="rE1-nx-616"/>
                             <constraint firstItem="jQQ-9b-2rA" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="20" id="ruZ-Hl-zEh"/>
